--- a/index.html
+++ b/index.html
@@ -40,32 +40,32 @@ function init(){
         'length':3  
     }
     var hash ={
-        a:'acfun.com',
-        b:'bilibili.com',
+        'a':'acfun.com',
+        'b':'bilibili.com',
         'c':'cctv.com',
-        d:'dilidili.com',
+        'd':'dilidili.com',
         'e':'ele.me',
         'f':'fishc.com',
         'g':'google.com',
         'h':'hao123.com',
         'i':'iqiyi.com',
         'j':'js.jirengu.com',
-        k:'kpl.qq.com',
-        l:'lol.qq.com',
-        m:'meitu.com',
-        n:'name.com',
-        o:'oppo.com',
-        p:'ping.com',
+        'k':'kpl.qq.com',
+        'l':'lol.qq.com',
+        'm':'meitu.com',
+        'n':'name.com',
+        'o':'oppo.com',
+        'p':'ping.com',
         'q':'qq.com',
-        r:'ruanyifeng.com',
-        s:'soso.com',
-        t:'taobao.com',
-        u:'uc123.com',
-        v:'v2ex.com',
-        w:'weibo.com',
-        x:'xiedaimala.com',
-        y:'yy.com',
-        z:'zhihu.com'
+        'r':'ruanyifeng.com',
+        's':'soso.com',
+        't':'taobao.com',
+        'u':'uc123.com',
+        'v':'v2ex.com',
+        'w':'weibo.com',
+        'x':'xiedaimala.com',
+        'y':'yy.com',
+        'z':'zhihu.com'
     }
     
     var hashInlocalStorage = getFormLocalStorage('zzz')
